Fix custom CSS for new YouTube element tree, remove shorts from description, make comment reply button more visible :)

--- a/Youtube Custom Css.css
+++ b/Youtube Custom Css.css
@@ -1,5 +1,5 @@
 #content-text {
-  color: rgba(190, 100,100, 1);
+  color: rgba(190, 100, 100, 1);
 }
 
 #description {
@@ -12,6 +12,18 @@
 
 #description-inner {
   color: rgba(200, 250, 250, 1);
+}
+
+#description .yt-core-attributed-string--link-inherit-color {
+  color: rgba(200, 250, 250, 1);
+}
+
+#description .yt-core-attributed-string--link-inherit-color a {
+  color: rgba(62, 166, 255, 1);
+}
+
+#description .yt-core-attributed-string--link-inherit-color span a {
+  color: rgba(95, 150, 255, 1);
 }
 
 #description-inline-expander {
@@ -43,6 +55,10 @@ div#subscribe-button ytd-subscribe-button-renderer yt-button-shape button[aria-l
   color: rgb(80, 80, 80);
 }
 
+ytd-subscribe-button-renderer[subscribed] button div.yt-spec-button-shape-next__button-text-content span {
+  color: rgb(80, 80, 80);
+}
+
 #segmented-like-button ytd-toggle-button-renderer yt-button-shape button[aria-pressed="true"] div yt-icon,
 yt-icon-button button[aria-label~="like"][aria-pressed="true"],
 tp-yt-paper-button[aria-label~="like"][aria-pressed="true"] yt-icon,
@@ -51,18 +67,25 @@ ytd-toggle-button-renderer#like-button a yt-icon-button button[aria-pressed="tru
 ytd-toggle-button-renderer#like-button a yt-icon-button button[aria-label="Unlike"] {
   color: rgb(64,225,64);
 }
-
-#segmented-like-button ytd-toggle-button-renderer yt-button-shape button[aria-pressed="true"] div yt-icon yt-animated-icon ytd-lottie-player lottie-component svg g g g path{
+ 
+#segmented-like-button button[aria-pressed="true"] svg g g g path,
+like-button-view-model button[aria-pressed="true"] svg g g g path {
   color: rgb(64,225,64);
   fill: rgb(64, 225, 64);
   stroke: rgb(64, 225, 64);
 }
 
-#segmented-dislike-button ytd-toggle-button-renderer yt-button-shape button[aria-pressed="true"] div yt-icon,
+#segmented-dislike-button button[aria-pressed="true"] div yt-icon,
 yt-icon-button button[aria-label~="Dislike"][aria-pressed="true"] yt-icon,
 ytd-toggle-button-renderer#dislike-button yt-button-shape button[aria-pressed="true"],
 ytd-toggle-button-renderer#dislike-button a yt-icon-button button[aria-pressed="true"] {
   color: rgb(255,55,25);
+}
+
+dislike-button-view-model button[aria-pressed="true"] yt-icon svg path {
+  color: rgb(255,55,25);
+  fill: rgb(255,55,25);
+  stroke: rgb(255,55,25);
 }
 
 #reply-button-end ytd-button-renderer yt-button-shape button {
@@ -80,16 +103,28 @@ ytd-toggle-button-renderer#dislike-button a yt-icon-button button[aria-pressed="
   right: 10px;
 }
 
+@keyframes randomColor {
+  0%   { color: red; }
+  25%  { color: blue; }
+  50%  { color: green; }
+  75%  { color: yellow; }
+  85%  { color: orange; }
+  100% { color: red; }
+}
+
+
 #reply-button-end ytd-button-renderer yt-button-shape button div span:after{
   visibility: visible;
-  color: rgb(140,80,80);
-  font-size: 27px;
+  font-size: 28px;
+  font-weight: bold;
   content: "⮱";
   display: block;
   position: absolute;
   padding: 0px;
-  top: -5px;
+  top: -7px;
   left: -2px;
+  animation: randomColor 15s infinite;
+  /* color: rgb(80,80,140); */
 }
 
 div#playlist-action-menu ytd-menu-renderer div#top-level-buttons-computed ytd-toggle-button-renderer a yt-icon-button#button button[aria-pressed="true"] yt-icon.ytd-toggle-button-renderer {
@@ -100,10 +135,23 @@ div#notification-preference-button ytd-subscription-notification-toggle-button-r
   color: rgb(230,190,10);
 }
 
-div#notification-preference-button ytd-subscription-notification-toggle-button-renderer a yt-icon-button#button button[aria-label^="Current setting is personal"] yt-icon.ytd-subscription-notification-toggle-button-renderer {
+ytd-subscribe-button-renderer button[aria-label^="Current setting is all"] div.yt-spec-button-shape-next__icon yt-icon {
+  color: rgb(230,190,10);
+}
+
+div#notification-preference-button ytd-subscription-notification-toggle-button-renderer a yt-icon-button#button button[aria-label^="Current setting is personalized"] yt-icon.ytd-subscription-notification-toggle-button-renderer {
   color: rgb(150,130,10);
+}
+
+ytd-subscribe-button-renderer button[aria-label^="Current setting is personalized"] div.yt-spec-button-shape-next__icon yt-icon {
+  color: rgb(230,190,10);
+  stroke: rgb(230,190,10);
 }
 
 div#notification-preference-button ytd-subscription-notification-toggle-button-renderer a yt-icon-button#button button[aria-label^="Current setting is receive"] yt-icon.ytd-subscription-notification-toggle-button-renderer {
   color: rgb(80,60,10);
+}
+
+#description ytd-reel-shelf-renderer.ytd-structured-description-content-renderer {
+  display: none;
 }
